# burger-quiz-app

./: .gitattributes  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/accounts/: admin.py  models.py
backend/app/: main.py
backend/app/core/: config.py
backend/config/: settings.py
backend/src/accounts/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/src/accounts/migrations/: 0001_initial.py  0002_email_unique_required.py  0003_add_avatar.py  0004_alter_customuser_options.py
backend/src/accounts/serializers/: __init__.py  docs.py  user.py
backend/src/accounts/tests/: __init__.py  test_activation.py  test_jwt.py  test_register.py  test_reset_password.py  test_reset_username.py  test_user_detail.py  test_user_list.py  test_user_me.py
backend/src/accounts/views/: __init__.py  jwt.py  users.py
backend/src/config/: schema.py  settings.py  test_runner.py  urls.py
backend/src/config/test_report/: __init__.py  constants.py  html_builder.py  parser.py  utils.py
backend/src/quiz/: admin.py  apps.py  signals.py  urls.py  views.py
backend/src/quiz/migrations/: 0001_initial.py  0002_alter_burgerquiz_options_addition_original_and_more.py  0003_alter_question_options_and_more.py  0004_alter_addition_original_alter_question_image_url.py  0005_menutheme_original_alter_addition_original_and_more.py  0006_addition_author_addition_created_at_addition_tags_and_more.py  0007_uuid_tagged_item.py  0008_videointerlude_burgerquizelement.py  (+2 more)
backend/src/quiz/models/: __init__.py  (+14 more)
(+348 files in other folders)
