[project]
name = "burger_quiz_backend"
version = "0.1.0"
description = "Backend for a BurgerQuiz app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.1",
    "django>=6.0.2",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "gunicorn>=25.0.3",
    "psycopg2-binary>=2.9.11",
]
